Create a form to let user add a new project
When user clicks the Add New Project button a form pops
up that lets the user input a project name and submit

--- a/src/template.html
+++ b/src/template.html
@@ -12,23 +12,23 @@
     </div>
     <div class="main">
         <div class="sidebar">
-            <div style="font-size: 1.5rem; font-weight: bold;">Sections</div>
-            <div class="sidebar-btns">
-                <div class="sidebar-btn school-section">
+            <div style="font-size: 1.5rem; font-weight: bold;">projects</div>
+            <div class="sidebar-btns project-section">
+                <div class="sidebar-btn school-project">
                     <div class="sidebar-btn-title">
                         <div class="sidebar-btn-img"></div>
                         <div class="sidebar-btn-text">School</div>
                     </div>
                     <div class="sidebar-btn-close">&times</div>
                 </div>
-                <div class="sidebar-btn home-section">
+                <div class="sidebar-btn home-project">
                     <div class="sidebar-btn-title">
                         <div class="sidebar-btn-img"></div>
                         <div class="sidebar-btn-text">Home</div>
                     </div>
                     <div class="sidebar-btn-close">&times</div>
                 </div>
-                <div class="sidebar-btn btn-new-section">Add new</div>
+                <div class="sidebar-btn btn-new-project">Add new</div>
             </div>
         </div>
         <div class="content">
@@ -39,5 +39,15 @@
             </div>
         </div>
     </div>
+    <div class="project-form-container">
+        <form action="" class="project-form">
+            <div>
+                <input placeholder="Project title" required type="text" id="new-project-title" name="new-project-title">
+            </div>
+            <button type="submit" class="btn-project-form-submit">Add Project</button>
+        </form>
+    </div>
+    <div class="project-form-overlay"></div>
+
 </body>
 </html>
