--- a/src/template.html
+++ b/src/template.html
@@ -14,11 +14,11 @@
         <div class="sidebar">
             <div style="font-size: 1.5rem; font-weight: bold;">projects</div>
             <div class="project-btns project-section">
-                <div class="project-btn btn-new-project" style="background-color: white;">Add new</div>
+                <div class="btn-new-project" style="background-color: white;">Add new</div>
             </div>
         </div>
         <div class="content">
-            <div class="content-title">Home</div>
+            <div class="content-title"></div>
             <div class="tasks">
                 <div class="task">Wash clothes</div>
                 <div class="task">Water the plants</div>
@@ -34,6 +34,6 @@
         </form>
     </div>
     <div class="project-form-overlay"></div>
-
+    <button class="add-project">Add project</button>
 </body>
 </html>
