--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">To do list</div>
+        <div class="logo">To Do List</div>
     </div>
     <div class="main">
         <div class="sidebar">
@@ -20,7 +20,6 @@
         <div class="content">
             <div class="content-title"></div>
             <div class="tasks">
-                <div class="task">nothing to show</div>
             </div>
         </div>
     </div>
@@ -39,6 +38,10 @@
                 <input type="text" id="task-title" name="task-title" required>
             </div>
             <div>
+                <label for="task-description">Description</label>
+                <input type="text" id="task-description" name="task-description">
+            </div>
+            <div>
                 <label for="task-date">Enter date</label>
                 <input type="date" name="task-date" id="task-date" required>
             </div>
@@ -48,5 +51,13 @@
     <div class="project-form-overlay"></div>
     <div class="task-form-overlay"></div>
     <button class="btn-new-task">Add task</button>
+
+    <div class="task-details">
+        <div class="task-details-header">Task details</div>
+        <div class="task-details-title"></div>
+        <div class="task-details-description"></div>
+        <div class="task-details-date"></div>
+    </div>
+    <div class="task-details-overlay"></div>
 </body>
 </html>
